# secure-virtual-keyboard

./: README.md  package-lock.json  package.json
backend/: .gitignore  __init__.py  app.yaml  pyproject.toml
backend/app/v1/user/: endpoints.py
backend/controller/: firebase.py  otp.py  token.py  twilio.py
backend/credentials/: secure-virtual-keyboard-firebase-credentials.json
backend/model/: constants.py  models.py
backend/tests/: __init__.py  test_model_firebase_user.py
backend/tests/app/default/cors/: test_api_options_default_cors.py
backend/tests/app/v1/user/sign/in/: test_api_post_user_sign_in.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/components/: LoginComponent.css  LoginComponent.jsx
