[tool.poetry]
name = "secure-virtual-keyboard"
version = "0.1.0"
description = ""
authors = ["Leonardo Cech <leonardo.cech@catolicasc.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
requests = "^2.31.0"
firebase-admin = "^6.5.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-multipart = "^0.0.9"
uvicorn = "^0.29.0"
cryptography = "^42.0.5"
more-itertools = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
